--- a/octonions/Fano Plane.ipynb
+++ b/octonions/Fano Plane.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# The Fano Plane\n",
     "\n",
-    "The octonions are elements of an eight-dimensional non-associative division algbera $\\mathbb{O}$, extending $\\mathbb{Q}$, $\\mathbb{C}$, and $\\mathbb{R}$ (the quaternions, complex numbers, and real numbers).\n",
+    "The **octonions** are elements of an eight-dimensional non-associative division algbera $\\mathbb{O}$, extending $\\mathbb{Q}$, $\\mathbb{C}$, and $\\mathbb{R}$ (the quaternions, complex numbers, and real numbers).\n",
     "\n",
-    "Inside $\\mathbb{O}$ we have eight \"unit octonions\", including 1. The seven unit octionions which are not $1$ we'll label $e_0, e_1, e_2, e_3, e_4, e_5, e_7$. These seven form a space called the Fano plane, which looks geometrically like 2-dimensional projective space over the field with 2 elements $\\mathbb{F}_2$ (i.e. the set of lines through the origin in $\\mathbb{F}_2^3$). The following diagram (adapted from John Baez) illustrates which of these units are co-linear in the Fano plane:\n",
+    "Inside $\\mathbb{O}$ we have eight \"unit octonions\", including 1. The seven unit octionions which are not $1$ we'll label $e_0, e_1, e_2, e_3, e_4, e_5, e_7$. These seven form a space called the **Fano plane**, which looks geometrically like 2-dimensional projective space over the field with 2 elements $\\mathbb{F}_2$ (i.e. the set of lines through the origin in $\\mathbb{F}_2^3$). The following diagram (adapted from John Baez) illustrates which of these units are co-linear in the Fano plane:\n",
     "\n",
     "![](fano.jpg)\n",
     "\n",
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feel free to take a peek at simplicial.py to see how we check if a function is an automorphism of an oriented simplicial complex.\n",
+    "#### Feel free to take a peek at simplicial.py to see how we check if a function is an automorphism of an oriented simplicial complex.\n",
     "\n",
     "### Let's now try to find all automorphisms of the Fano plane"
    ]
@@ -360,15 +360,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We can verify that the order of automorphism f1 is 7, and the order of automorphism f2 is 3, which means the size of the automorphism group of the Fano plane must be a multiple of 3*7 = 21. Since we found its size is *exactly* 21, this tells us f1 and f2 generate the automorphism group."
+    "#### We can verify that the order of automorphism f1 is 7, and the order of automorphism f2 is 3, which means the size of the automorphism group of the Fano plane must be a multiple of 3 * 7 = 21. Since we found its size is *exactly* 21, this tells us f1 and f2 generate the automorphism group, so the automorphism group of the Fano plane is isomorphic to $\\mathbb{Z}/3\\mathbb{Z} \\times \\mathbb{Z}/7\\mathbb{Z}$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
