--- a/octonions/Fano Plane.ipynb
+++ b/octonions/Fano Plane.ipynb
@@ -360,8 +360,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We can verify that the order of automorphism f1 is 7, and the order of automorphism f2 is 3, which means the size of the automorphism group of the Fano plane must be a multiple of 3 * 7 = 21. Since we found its size is *exactly* 21, this tells us f1 and f2 generate the automorphism group, so the automorphism group of the Fano plane is isomorphic to $\\mathbb{Z}/3\\mathbb{Z} \\times \\mathbb{Z}/7\\mathbb{Z}$"
+    "#### We can verify that the order of automorphism f1 is 7, and the order of automorphism f2 is 3, which means the size of the automorphism group of the Fano plane must be a multiple of 3 * 7 = 21. Since we found its size is *exactly* 21, this tells us f1 and f2 generate the automorphism group, so the automorphism group of the Fano plane has 21 elements."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
