--- a/divison-star-algebras/division-star-algebras.tex
+++ b/divison-star-algebras/division-star-algebras.tex
@@ -16,12 +16,14 @@
 \newtheorem{claim}[theorem]{Claim}
 \newtheorem{question}[theorem]{Question}
 \newtheorem{corollary}[theorem]{Corollary} 
+\newtheorem{observation}[theorem]{Observation} 
 \theoremstyle{definition}
 \newtheorem{definition}[theorem]{Definition}
 \newtheorem{statement}[theorem]{Statement}
 \newtheorem{notation}[theorem]{Notation} 
 \theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
+
 
 \begin{document}
 
@@ -42,12 +44,25 @@
 (5) $^*$ is a multiplicative anti-homomorphism: $(\mathbf{x} \cdot \mathbf{y})^* = \mathbf{y}^* \cdot \mathbf{x}^*$
 \end{definition}
 
-\begin{definition} A representation of a $*$-algebra $\mathcal{A}$ over a field $\mathcal{K}$ is a $\mathcal{K}$-linear map $\pi : \mathcal{A} \rightarrow V$ to some vector space $\mathcal{V}$ together with a $\mathcal{K}$-linear function $L: \mathcal{V} \rightarrow End(V)$ and an involution $^{\dagger} : V \rightarrow V$ such that
+\begin{definition} A \textbf{presentation} of a $*$-algebra over a field $\mathcal{K}$ is a vector space $V$ over \(\mathcal{K}\) together with a $\mathcal{K}$-linear function $L: V \rightarrow End(V)$ and an involution $^{\dagger} : V \rightarrow V$ such that for all \(x,y \in V\) $(L(x)y)^{\dagger} = L(y^{\dagger}) x^{\dagger}$.\\
+
+\noindent We say \((V, L, {}^\dagger)\) is a \textbf{presentation of \(\mathcal{A}\)} if there is a linear isomorphism \(\pi: \mathcal{A} \rightarrow V\) such that:
 
 (a) For all $\mathbf{x}, \mathbf{y} \in \mathcal{A}$, $\pi(\mathbf{x} \cdot \mathbf{y}) = L(\pi(\mathbf{x})) \pi(\mathbf{y})$ 
 
-(b) For all $\mathbf{x} \in \mathcal{A}$, $\pi(x^*) = \pi(x)^{\dagger}$
+(b) For all $\mathbf{x} \in \mathcal{A}$, $\pi(\mathbf{x}^*) = \pi(\mathbf{x})^{\dagger}$
 \end{definition} 
+
+\begin{observation} Every \(*\)-algebra \(\mathcal{A}\) over a field \(\mathcal{K}\) has a presentation where \(\pi\) is the forgetful map from \(\mathcal{A}\) to the underling vector space \(V\) of \(\mathcal{A}\), \(L(x)y := \pi(\pi^{-1}(x) \cdot \pi^{-1}(y)\)), and \(x^{\dagger} := \pi(\pi^{-1}(x)^*)\).
+\end{observation}
+
+\begin{proof}
+Properties (a) and (b) are satisfied by definition. It's clear \(\dagger\) is an involution. \((x,y) \mapsto L(x)y\) is bilinear since it is the pushforward of multiplication in \(\mathcal{A}\), so \(x \mapsto L(x)\) is \(\mathcal{K}\)-linear. It suffices to show then that for all \(x,y \in V\), $(L(x)y)^{\dagger} = L(y^{\dagger}) x^{\dagger}$. We can see this as follows:
+
+\[(L(x)y)^{\dagger} = \pi(\pi^{-1}(L(x)y)^*) = \pi((\pi^{-1}(x) \cdot \pi^{-1}(y))^*)\] \[ = \pi(\pi^{-1}(y)^* \cdot \pi^{-1}(x)^*)= \pi(\pi^{-1}(y^{\dagger}) \cdot \pi^{-1}(x^{\dagger})) = L(y^{\dagger})x^{\dagger}\].
+\end{proof}
+
+
 
 \begin{definition}
 A division $*$-algebra over $\mathcal{K}$ is a $*$-algebra over $\mathcal{K}$ satisfying the following two additional conditions:
